--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
-        <div>TODO write content pacopul</div>
+        <div>TODO write content Paco Other</div>
     </body>
 </html>
